@@ -1,6 +1,6 @@
 package lab.space.vilki_palki_rest.service.impl;
 
-import jakarta.persistence.EntityNotFoundException;
+import javax.persistence.EntityNotFoundException;
 import lab.space.vilki_palki_rest.entity.ShoppingCart;
 import lab.space.vilki_palki_rest.mapper.ShoppingCartMapper;
 import lab.space.vilki_palki_rest.model.shopping_cart.ShoppingCartResponse;
@@ -14,6 +14,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -33,7 +34,7 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
     @Override
     public List<ShoppingCartResponse> getAllShoppingCartByUserId(Long id) {
         return shoppingCartRepository.findAllByUserId(id)
-                .stream().map(shoppingCartMapper::toDto).toList();
+                .stream().map(shoppingCartMapper::toDto).collect(Collectors.toList());
     }
 
     @Override
@@ -44,9 +45,9 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
     @Override
     public void saveShoppingCart(ShoppingCartSaveRequest request) {
         ShoppingCart shoppingCart = new ShoppingCart();
-        shoppingCart.setCount(request.count());
-        shoppingCart.setUser(userService.getUserById(request.userId()));
-        shoppingCart.setProduct(productService.getProduct(request.productId()));
+        shoppingCart.setCount(request.getCount());
+        shoppingCart.setUser(userService.getUserById(request.getUserId()));
+        shoppingCart.setProduct(productService.getProduct(request.getProductId()));
 
         shoppingCartRepository.save(shoppingCart);
     }
